add mockito libs for tests