@@ -69,6 +69,7 @@ jacocoTestReport {
 
 test {
   finalizedBy jacocoTestReport
+  jvmArgs '-Dnet.bytebuddy.experimental=true'
 }
 
 testing {
